--- a/css/scss/common/_variable.scss
+++ b/css/scss/common/_variable.scss
@@ -1,3 +1,7 @@
-$blue: #0000ff;
-$green-gray: #686868;
-$dark-gray: #202020;
+$blue: #0601ff;
+$black: #0d0d0d;
+$yellow: #f8bd18;
+$yellow-normal: #fff7e2;
+$yellow-gray: #f9f9f9;
+$gray-normal: #9d9d9d;
+$dark-gray: #545454;
