--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -1,6 +1,20 @@
 header {
   padding: 15px 0px;
-
+  background: linear-gradient(
+    90.25deg,
+    hsla(0, 0%, 98.8%, 0.7) 5.68%,
+    hsla(0, 0%, 98.8%, 0.6) 143.91%
+  );
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  // background-color: rgba($color: #ffffff, $alpha: 0.9);
+  height: 100px;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  z-index: 99;
+  top: 0;
+  left: 0;
   a.logo {
     display: inline-block;
     img {
@@ -9,9 +23,7 @@ header {
   }
 
   .right-header {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+    @include flex-position(flex, end, center);
   }
 
   .navigation {
@@ -21,19 +33,36 @@ header {
 
     li {
       display: inline-block;
-
+      margin: 0px 15px;
       a {
+        position: relative;
         display: inline-block;
+        font-size: 16px;
+        font-weight: 500;
         text-decoration: none;
-        color: $dark-gray;
-        padding: 0px 15px;
+        color: $black;
         vertical-align: middle;
+        &:after {
+          position: absolute;
+          content: "";
+          width: 0;
+          height: 2px;
+          bottom: -7px;
+          left: 0;
+          background-color: $blue;
+          transform: translate(0);
+          transition: all 0.3s ease;
+        }
+        &:hover {
+          &:after {
+            width: 50%;
+          }
+        }
       }
 
       &:last-child {
-        padding-right: 0px;
+        margin-right: 0px;
       }
     }
   }
 }
-
