--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -1,16 +1,100 @@
+main {
+  background-color: $yellow-gray;
+}
 /** == Banner Section CSS Start == **/
 .banner-section {
-  background-image: linear-gradient(
-      180deg,
-      rgba(40, 40, 40, 0.2),
-      rgba(40, 40, 40, 0.8)
-    ),
-    url("../images/home/banner/banner.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 450px;
-  display: flex;
-  align-items: center;
+  padding: 20px 0;
+  .banner-container {
+    background-image: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0.5),
+        rgba(6, 6, 6, 0.5)
+      ),
+      url("../images/home/banner/banner.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 700px;
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+
+    .banner-content {
+      margin: 0 auto;
+      max-width: 1400px;
+    }
+
+    h1 {
+      font-weight: 700;
+      color: white;
+    }
+    p {
+      margin-top: 20px;
+      font-size: 24px;
+      color: white;
+    }
+    .cta-btn {
+      margin-top: 30px;
+    }
+  }
 }
 /** == Banner Section CSS End == **/
+
+/** == Location Section CSS Start == **/
+.location-section {
+  background-image: url(../images/home/locations/vector.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  .storage-unit {
+    .map {
+      margin-right: -200px;
+      img {
+        border-radius: 12px;
+      }
+      &.two {
+        margin-left: -200px;
+      }
+    }
+    .map-wrapper {
+      position: relative;
+      .one {
+        position: absolute;
+        z-index: 0;
+        top: -70px;
+        right: -30px;
+        i {
+          &.icon-one {
+            font-size: 140px;
+            font-weight: 400;
+            color: $yellow;
+          }
+        }
+      }
+      .two {
+        position: absolute;
+        z-index: 0;
+        top: -90px;
+        left: -30px;
+        i {
+          &.icon-two {
+            font-size: 140px;
+            font-weight: 400;
+            color: $yellow;
+          }
+        }
+      }
+      .map-content {
+        position: relative;
+        z-index: 9;
+        padding: 80px 40px;
+        background-color: white;
+        border-radius: 12px;
+        box-shadow: 0px 20px 20px 0px rgba(164, 164, 164, 0.25);
+      }
+    }
+
+    
+  }
+}
+/** == Location Section CSS End == **/
