--- a/css/scss/common/_common.scss
+++ b/css/scss/common/_common.scss
@@ -31,6 +31,11 @@ h5 {
   font-weight: 700;
   color: $blue;
 }
+h6 {
+  font-size: 24px;
+  font-weight: 700;
+  color: $black;
+}
 
 p {
   margin: 0;
@@ -79,6 +84,11 @@ ul {
       background-color: $blue;
     }
   }
+}
+
+// Main section BG
+main {
+  background-color: $yellow-gray;
 }
 
 //Feature Heading
