--- a/css/scss/common/_common.scss
+++ b/css/scss/common/_common.scss
@@ -19,12 +19,15 @@ h1 {
 }
 h2 {
   font-size: 80px;
+  font-weight: 700;
+  color: white;
 }
 h3 {
   font-size: 48px;
 }
 h4 {
   font-size: 36px;
+  color: $black;
 }
 h5 {
   font-size: 32px;
@@ -59,6 +62,11 @@ ul {
 .first-padding {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+//Common padding
+.common-margin {
+  margin-top: 20px;
 }
 
 /* Button CSS */
