--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -2,8 +2,8 @@ header {
   padding: 15px 0px;
   background: linear-gradient(
     90.25deg,
-    hsla(0, 0%, 98.8%, 0.7) 5.68%,
-    hsla(0, 0%, 98.8%, 0.6) 143.91%
+    hsla(0, 0%, 98.8%, 0.85) 5.68%,
+    hsla(0, 0%, 98.8%, 0.85) 143.91%
   );
   -webkit-backdrop-filter: blur(30px);
   backdrop-filter: blur(30px);
@@ -18,7 +18,7 @@ header {
   a.logo {
     display: inline-block;
     img {
-      width: 100%;
+      height: 58px;
     }
   }
 
