--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -52,6 +52,9 @@ Unit Prices Page CSS Start
       &.text-transparent {
         color: transparent;
       }
+      &.fw-par {
+        font-weight: 600;
+      }
     }
   }
 }
