--- a/css/style.css
+++ b/css/style.css
@@ -522,23 +522,30 @@ Size Guide Page CSS Start
   padding-bottom: 100px; }
   .storage-calculator-section .category ul {
     margin-top: 0; }
-  .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
-    font-size: 24px;
-    color: #0601ff; }
-  .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
-    border: none;
-    outline: none;
-    background-color: #bfbfbf;
-    color: #0d0d0d;
-    display: block;
-    width: 85px;
-    padding: 20px 10px;
-    border-radius: 4px; }
-  .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
-    font-size: 16px;
-    font-weight: 500; }
+  .storage-calculator-section .category-details .single-unit {
+    padding: 0; }
+    .storage-calculator-section .category-details .single-unit .wrapper {
+      padding: 20px 0; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .plus-minus a i {
+      font-size: 24px;
+      color: #0601ff; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .price-count .input-count input {
+      border: none;
+      outline: none;
+      background-color: #bfbfbf;
+      color: #0d0d0d;
+      display: block;
+      width: 85px;
+      padding: 20px 10px;
+      border-radius: 4px; }
+    .storage-calculator-section .category-details .single-unit .unit-price-count .refresh {
+      font-size: 16px;
+      font-weight: 500; }
   .storage-calculator-section .category-details .bed-room-content {
-    padding: 40px 80px 20px; }
+    padding: 40px 80px 20px;
+    border-top: 1px solid #bfbfbf;
+    border-left: 1px solid #bfbfbf;
+    border-right: 1px solid #bfbfbf; }
     .storage-calculator-section .category-details .bed-room-content h5 {
       font-weight: 600;
       color: #0601ff; }
@@ -552,6 +559,18 @@ Size Guide Page CSS Start
 /** == Storage Calculator Section CSS End == **/
 /** ========================= 
 Size Guide Page CSS End 
+========================= **/
+/** ========================= 
+Nearby Page CSS Start 
+========================= **/
+/** == Banner Section CSS Start == **/
+.banner-section.nearby-banner .banner-container {
+  min-height: 450px;
+  background-image: linear-gradient(180deg, rgba(6, 6, 6, 0.5), rgba(6, 6, 6, 0.5)), url("../images/nearby/banner/banner.webp"); }
+
+/** == Banner Section CSS End == **/
+/** ========================= 
+Nearby Page CSS End 
 ========================= **/
 
 /*# sourceMappingURL=style.css.map */
